<resources>
    <string name="app_name">AvaliaShop</string>
    <string name="total_do_pedido">Total do pedido</string>
    <string name="adicionar_itens_ao_pedido">Adicionar itens ao pedido</string>
    <string name="pagamento_parcial">Pagamento parcial</string>
    <string name="pagamento_valor">Pagamento valor</string>
    <string name="pagamento_direto">Pagamento direto</string>
    <string name="listagem_de_ordens">Listagem de Ordens</string>
    <string name="sua_opini_o_essencial">Sua opinião é essencial</string>
    <string name="por_favor_avalie_o_nosso">Por favor, avalie o nosso</string>
    <string name="pessimo">Péssimo</string>
    <string name="ruim">Ruim</string>
    <string name="regular">Regular</string>
    <string name="bom">Bom</string>
    <string name="otimo">Ótimo</string>
    <string name="pagar_conta">Pagar conta</string>
    <string name="debito">Débito</string>
    <string name="preco">Preço</string>
    <string name="produto">Produto</string>
    <string name="atendimento">Atendimento</string>
    <string name="ambiente">Ambiente</string>
    <string name="recomendaria">Recomendaria a um amigo</string>
    <string name="o_quanto">O quanto você nos</string>
    <string name="sucesso">O PAGAMENTO FOI REALIZADO COM SUCESSO!</string>
    <string name="cancelado">PAGAMENTO CANCELADO</string>
    <string name="ERRO">OCORREU UM ERRO AO REALIZAR O PAGAMENTO!</string>
    <string name="valor_parcela">DE R$ %1$s</string>
    <string name="nmr_parc_ivalid">O número de parcelas deve estar entre 1  e 12</string>
    <string name="continuar">continuar</string>
    <string name="credito">Crédito</string>
    <string name="vc_alimentacao">VOUCHER_ALIMENTACAO</string>
    <string name="vc_refeicao">VOUCHER_REFEICAO</string>
    <string name="algo_errado">ERROR!</string>
    <string name="informacao">Informação Cielo LIO</string>
    <string name="servico_desvinculado">O serviço foi desvinculado!</string>
    <string name="digite_umvalor">Digite um valor válido e maior que 0!</string>
    <string name="pagar">Pagar</string>
    <string name="voucher">Voucher</string>
</resources>