<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".FormasPagActivity">

    <TextView
        android:id="@+id/txt_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Escolha a forma de pagamento"
        android:textColor="@color/padraoavaliashop"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linear_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n_parcelas">

            <ProgressBar
                android:id="@+id/progressBarC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/credito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credito"
                android:padding="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@drawable/fundo_formas_pag"
                android:layout_marginBottom="20dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n_parcelas">

            <ProgressBar
                android:id="@+id/progressBarD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/debito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debito"
                android:padding="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@drawable/fundo_formas_pag"
                android:layout_marginBottom="20dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n_parcelas">

            <ProgressBar
                android:id="@+id/progressBarV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/voucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voucher"
                android:textAllCaps="true"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@drawable/fundo_formas_pag"
                android:layout_marginBottom="20dp"/>


        </RelativeLayout>

        <ImageView
            android:id="@+id/home_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_home_24"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>