<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        tools:context=".ActivityAvalienos">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua_opini_o_essencial"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/por_favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/por_favor_avalie_o_nosso"
            android:textColor="@color/cinza_mais_escuro"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/a_avaliar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/padraoavaliashop"
            android:textSize="25sp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/txt_nivel_satisfacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/star_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/star1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_star_24"
                android:layout_margin="5dp"/>
            <ImageView
                android:id="@+id/star2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_star_cinza24"
                android:layout_margin="5dp"/>
            <ImageView
                android:id="@+id/star3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_star_cinza24"
                android:layout_margin="5dp"/>
            <ImageView
                android:id="@+id/star4"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_star_cinza24"
                android:layout_margin="5dp"/>
            <ImageView
                android:id="@+id/star5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_star_cinza24"
                android:layout_margin="5dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/edt_quanto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="40dp"
            android:text=""
            android:maxLength="2"
            android:inputType="number"/>


        <LinearLayout
            android:id="@+id/teclado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/cinza">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/bt1"
                    android:text="1"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    />
                <TextView
                    android:id="@+id/bt4"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    />
                <TextView
                    android:id="@+id/bt7"
                    android:layout_height="wrap_content"
                    android:text="7"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bt2"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="2"
                    />
                <TextView
                    android:id="@+id/bt5"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="5"
                    />
                <TextView
                    android:id="@+id/bt8"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="8"
                    />
                <TextView
                    android:id="@+id/bt0"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="0"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/bt3"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="3"
                    />
                <TextView
                    android:id="@+id/bt6"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="6"
                    />
                <TextView
                    android:id="@+id/bt9"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="9"
                    />
                <TextView
                    android:id="@+id/bt10"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    style="@style/styleTextBold25sp"
                    android:text="10"
                    />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

            <Button
                android:id="@+id/pagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/padraoavaliashop"
                android:padding="40dp"
                android:text="@string/pagar_conta"
                android:textSize="25dp" />


        </RelativeLayout>

    </LinearLayout>
</ScrollView>
